--- a/.travis.yml
+++ b/.travis.yml
@@ -1,9 +1,12 @@
 language: python
 
 python:
-  - "2.6"
   - "2.7"
-  - "3.4"
+#  - "3.4"
+
+before_install:
+  - sudo apt-get update -qq
+  - sudo apt-get install -y pandoc
 
 install:
   - pip install -r requirements-dev.txt
