--- a/.travis.yml
+++ b/.travis.yml
@@ -4,6 +4,10 @@ python:
   - "2.7"
 #  - "3.4"
 
+before_install:
+  - sudo apt-get update -qq
+  - sudo apt-get install -y pandoc
+
 install:
   - pip install -r requirements-dev.txt
   - python setup.py install
