use flake8 which combines pep8 and pyflakes

--- a/.travis.yml
+++ b/.travis.yml
@@ -14,8 +14,7 @@ install:
 
 script:
   - python setup.py test
-  - find -type f -name "*.py" | grep -v docs | xargs pep8 --ignore=E402
-  - find -type f -name "*.py" | grep -v docs | xargs pyflakes
+  - find -type f -name "*.py" | grep -v docs | xargs flake8 --ignore=E402
 
 after_success:
   - coverage run --source woudc_extcsv setup.py test
