--- a/.travis.yml
+++ b/.travis.yml
@@ -14,7 +14,7 @@ install:
 
 script:
   - python setup.py test
-  - find -type f -name "*.py" xargs | flake8
+  - find -type f -name "*.py" | xargs flake8
 
 after_success:
   - coverage run --source woudc_extcsv setup.py test
