--- a/appveyor.yml
+++ b/appveyor.yml
@@ -2,7 +2,7 @@ environment:
   matrix:
     - PYTHON: "C:\\Python27"
       MINICONDA: "C:\\Miniconda"
-      PYTHON_VERSION: "2.7.x"
+      PYTHON_VERSION: "2.7"
       PYTHON_ARCH: "32"
 
 #    - PYTHON: "C:\\Python27-x64"
