Multi-row Table Parsing (#15)
* Allow parsing of multi-row tables

* Update WoudcClient calls to new version

* Revert to old pywoudc version

* PEP8 style fix

* Switch Appveyor build to Miniconda

* appveyor.yml escape char typo

* Strip Python version spec

* Attempt pyproj install through conda

* Silence conda prompts

* Parse omitted table columns as empty strings

* Switch table parser default to multirow

* Defer encoding handling to unicodecsv

* List GLOBAL_DAILY_SUMMARY as meta table

* Correct multirow table raw string storage

--- a/appveyor.yml
+++ b/appveyor.yml
@@ -1,7 +1,8 @@
 environment:
   matrix:
     - PYTHON: "C:\\Python27"
-      PYTHON_VERSION: "2.7.x"
+      MINICONDA: "C:\\Miniconda"
+      PYTHON_VERSION: "2.7"
       PYTHON_ARCH: "32"
 
 #    - PYTHON: "C:\\Python27-x64"
@@ -9,8 +10,12 @@ environment:
 #      PYTHON_ARCH: "64"
 
 install:
-  - set PATH=%PYTHON%;%PYTHON%\Scripts;%PATH%
-  - pip.exe install -r requirements-dev.txt
+  - set PATH=%MINICONDA%;%MINICONDA%\\Scripts;%PATH%
+  - conda update -q conda --yes
+  - conda create -q -n appveyor-tests python=%PYTHON_VERSION% --yes
+  - activate appveyor-tests
+  - conda install --file requirements-dev.txt --yes
+  - conda install -c conda-forge pyproj --yes
   - python setup.py install
 
 build: off
