--- a/.travis.yml
+++ b/.travis.yml
@@ -2,11 +2,11 @@ language: python
 
 python:
   - "2.7"
-#  - "3.4"
+  - "3.5"
 
 before_install:
   - sudo apt-get update -qq
-  - sudo apt-get install -y pandoc devscripts debhelper python-setuptools
+  - sudo apt-get install -y devscripts debhelper python-setuptools
 
 install:
   - pip install -r requirements-dev.txt
