--- a/appveyor.yml
+++ b/appveyor.yml
@@ -5,6 +5,10 @@ environment:
       PYTHON_VERSION: "2.7"
       PYTHON_ARCH: "32"
 
+    - PYTHON: "C:\\Python35"
+      MINICONDA: "C:\\Miniconda3"
+      PYTHON_VERSION: "3.5"
+      PYTHON_ARCH: "32"
 #    - PYTHON: "C:\\Python27-x64"
 #      PYTHON_VERSION: "2.7.x"
 #      PYTHON_ARCH: "64"
