--- a/appveyor.yml
+++ b/appveyor.yml
@@ -1,13 +1,9 @@
 environment:
   matrix:
-    - PYTHON: "C:\\Python27"
-      MINICONDA: "C:\\Miniconda"
-      PYTHON_VERSION: "2.7"
+    - PYTHON: "C:\\Python35"
+      MINICONDA: "C:\\Miniconda3"
+      PYTHON_VERSION: "3.5"
       PYTHON_ARCH: "32"
-
-#    - PYTHON: "C:\\Python27-x64"
-#      PYTHON_VERSION: "2.7.x"
-#      PYTHON_ARCH: "64"
 
 install:
   - set PATH=%MINICONDA%;%MINICONDA%\\Scripts;%PATH%
