--- a/appveyor.yml
+++ b/appveyor.yml
@@ -4,6 +4,10 @@ environment:
       MINICONDA: "C:\\Miniconda3"
       PYTHON_VERSION: "3.5"
       PYTHON_ARCH: "32"
+    - PYTHON: "C:\\Python37"
+      MINICONDA: "C:\\Miniconda3"
+      PYTHON_VERSION: "3.7"
+      PYTHON_ARCH: "32"
 
 install:
   - set PATH=%MINICONDA%;%MINICONDA%\\Scripts;%PATH%
