--- a/debian/control
+++ b/debian/control
@@ -4,13 +4,13 @@ Priority: optional
 Maintainer: WOUDC <ec.woudc.ec@canada.ca>
 Build-Depends: debhelper (>= 9), python, python-setuptools
 Standards-Version: 3.9.5
-X-Python-Version: >= 2.7
+X-Python-Version: >= 3.4
 Vcs-Git: https://github.com/woudc/woudc-extcsv.git
 
 Package: woudc-extcsv
 Architecture: all
-Depends: ${misc:Depends}, ${python:Depends}, python-pkg-resources, python-unicodecsv, python-pywoudc
+Depends: ${misc:Depends}, ${python:Depends}, python-pkg-resources, python-unicodecsv
 Homepage: https://woudc.org
 Description: WMO WOUDC format reader/writer
- woudc-extcsv is a Python package providing read/write support of the
+ woudc-extcsv is a Python package providing parsing and read/write support of the
  WOUDC Extended CSV format.
