--- a/debian/control
+++ b/debian/control
@@ -2,14 +2,14 @@ Source: woudc-extcsv
 Section: python
 Priority: optional
 Maintainer: WOUDC <ec.woudc.ec@canada.ca>
-Build-Depends: debhelper (>= 9), python, python-setuptools
+Build-Depends: debhelper (>= 9), python3, python3-setuptools
 Standards-Version: 3.9.5
 X-Python-Version: >= 3.4
 Vcs-Git: https://github.com/woudc/woudc-extcsv.git
 
 Package: woudc-extcsv
 Architecture: all
-Depends: ${misc:Depends}, ${python:Depends}, python-pkg-resources, python-unicodecsv
+Depends: ${misc:Depends}, ${python:Depends}, python3-pkg-resources, python3-unicodecsv
 Homepage: https://woudc.org
 Description: WMO WOUDC format reader/writer
  woudc-extcsv is a Python package providing parsing and read/write support of the
